# greenwiz

./: .gitignore  README.md  SECURITY.md  bot.py  googleapi_init.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tmp.py  tox.ini  wax_query.py
.github/workflows/: codeql-analysis.yml  tests.yml
cogs/: apis.py  basics.py  deploy_notif.py  dev.py  googleapi.py  intro_silencer.py  link_deleter.py  special_wax_addresses.py  test.py  trivia.py  upland_data.py  wax.py
greenwiz/: __main__.py  _update_fallback_special_addr_list.py  bot.py  requirements.txt
greenwiz/cogs/: about.py  administration.py  advent_of_code.py  apis.py  basics.py  blacklisting.py  deploy_notif.py  dev.py  googleapi.py  intro_silencer.py  join_alert.py  logging.py  members.py  mine_raffle.py  moderation.py  poems.py  santabot.py  special_wax_addresses.py  test.py  trickortreat.py  trivia.py  upland_data.py  wallet_links.py  wax.py
greenwiz/inactive_cogs/: santabot.py  trickortreat.py
greenwiz/res/: fallback_special_wax_addresses.txt
greenwiz/res/tmp/: blacklist.txt  filtered_filtered_dygycon11_answers_swag_Waffles.txt  temp_file.json
greenwiz/utils/: card.py  coerce_converters.py  coin_prices.py  cryptomonkey_util.py  error_handler.py  green_api_wrapper.py  logic_parser.py  meta_cog.py  paginate.py  readability.py  settings.py  storage.py  trivia_utils.py  util.py
greenwiz/wax_chain/: collection_config.py  link_deletion.py  wax_addresses.py  wax_market_utils.py  wax_util.py
greenwiz/wax_chain/wax_contracts/: atomicassets.py  atomictoolsx.py  monkeysmatch.py
res/: fallback_special_wax_addresses.txt
tests/cogs/: test_mine_raffle.py
tests/utils/: test_green_api_wrapper.py  test_util.py
tests/wax_chain/: test_wax_util.py
utils/: exceptions.py  green_api_wrapper.py  logic_parser.py  settings.py  storage.py  trivia_utils.py  util.py  wax_addresses.py
wax_chain/: link_deletion.py  wax_addresses.py  wax_util.py
wax_chain/wax_contracts/: atomicassets.py  atomictoolsx.py  monkeysmatch.py
