[build-system]
requires = []
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addops = "--cov=greenwiz"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "greenwiz"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_explicit_reexport = true
