[tool.poetry]
name = "greenwiz"
version = "1.1.0"
description = "The Green Wizard"
authors = ["Vyryn <43193760+Vyryn@users.noreply.github.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
"discord.py" = "^2.3.1"
parsedatetime = "^2.6"
ed25519-blake2b = "^1.4"
bitarray = "^2.8.0"
google-api-python-client = "^2.95.0"
google-auth-oauthlib = "^1.0.0"
google-api-core = "^2.11.1"
psutil = "^5.9.5"
pygit2 = "^1.12.2"
bananopy = "^0.3.3"
tldextract = "^3.4.4"
pytz = "^2023.3"
redis = "^4.6.0"
aioeosabi = "^0.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
tox = "^4.6.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"
pylint = "^2.17.5"
requests = "^2.31.0"
types-requests = "^2.31.0.2"
types-redis = "^4.6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=greenwiz"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "greenwiz"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
