[project]
name = "greenwiz"
version = "1.1.0"
description = "The Green Wizard"
authors = [{ name = "Vyryn", email = "43193760+Vyryn@users.noreply.github.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "discord-py>=2.6.4",
    "aioeosabi>=0.1.2",
    "aiohttp>=3.8.5",
    "ed25519-blake2b>=1.4",
    "parsedatetime>=2.6",
    "bitarray>=2.8.0",
    "google-api-python-client>=2.95.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-core>=2.11.1",
    "psutil>=5.9.5",
    "tldextract>=3.4.4",
    "pytz>=2023.3",
    "redis>=4.6.0",
    "types-cachetools>=5.5.0.20240820",
    "types-pyopenssl>=24.1.0.20240722",
    "types-pytz>=2025.2.0.20250326",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20250328",
    "ruff>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "requests>=2.31.0",
    "types-requests>=2.31.0.2",
    "types-redis>=4.6.0.3",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--cov=greenwiz"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "greenwiz"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
disable_error_code = ["attr-defined", "type-arg", "arg-type", "union-attr", "assignment", "misc", "call-overload", "no-any-return"]
