[metadata]
name = The Green Wizard
description = The First, Fastest, and most awesome NFT Tipbot
author = Vyryn
license = AGPL
license_files = [LICENSE]
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
instal_requires =
    
python_requires = >=3.10
package_dir =
    =greenwiz
zip_safe = no

[options.extras_require]
testing =
    flake8>=5.0
    tox>=3.26.0
    pytest>=7.1
    pytest-cov>=4.0
    mypy>=0.982

[options.package_data]
greenwizard = py.typed

[flake8]
max-line-length = 120
extend-ignore = E203
